<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reminder</string>
    <string name="edit_reminder_title">Edit Reminder</string>
    <string name="no_reminders">No Reminders. Have a nice day.</string>
    <string name="menu_insert">Add a new Reminder</string>
    <string name="menu_delete">Delete Reminder</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Save</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="date">Date</string>
    <string name="time">Time</string>

    <string name="task_saved_message">Task has been saved</string>

    <string name="notify_new_task_message">A task needs to be done !!</string>
    <string name="notify_new_task_title">Reminder!</string>
</resources>
