<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/title"
            android:textColor="@android:color/holo_orange_light" />

        <EditText
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="left"

            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/body"
            android:textColor="@android:color/holo_orange_light" />

        <EditText
            android:id="@+id/body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="top"
            android:lines="5"

            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/date"
            android:textColor="@android:color/holo_orange_light" />

        <Button
            android:id="@+id/reminder_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_dark" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/time"
            android:textColor="@android:color/holo_orange_light" />

        <Button
            android:id="@+id/reminder_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_dark" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@android:color/holo_blue_dark"

            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>